<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="top">图表上半部分</string>
    
    
	<string name="company">成都格物致知软件</string>
	<string name="about_us_app">曹教瘦减肥餐版本v2.00</string>
	<string name="about_us_company">格物致知</string>
    <string name="app_name">曹教瘦减肥餐</string>
    <string name="action_settings">Settings</string>
    <string name="find_location">查找位置信息</string>
    <string name="get_location">点击获取当前位置</string>
    <string name="restaurant_list">餐厅列表</string>
    <string name="main_title">曹教瘦减肥餐</string>
    <string name="map_title">地图模式</string>
    <string name="my_account">个人中心</string>
    <string name="submit_account_info_ok">保存</string>
    <string name="connect_qq_name">腾讯QQ</string>
    <string name="connect_weibo_name">新浪微博</string>
    <string name="connect_submit_name">绑定</string>
    <string name="connect_remove_name">解除绑定</string>
    <string name="weibosdk_toast_auth_success">授权成功</string>
    <string name="weibosdk_toast_auth_failed">授权失败</string>
    <string name="weibosdk_toast_auth_canceled">取消授权</string>
    <string name="order_comment_title">订单点评</string>
    <string name="order_detail_title">订单明细</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="load_more">更多</string>
    <string name="load_ing">加载中···</string>
    <string name="load_full">已加载全部</string>
    <string name="load_empty">暂无数据</string>
    <string name="load_error">加载数据出错</string>
    <string name="title_activity_map">地图模式</string>
    
    
    <string name="first_paper_tiz">顾客体重列表</string>
    <string name="first_paper_zhaop">顾客照片</string>
    <string name="first_paper_taocjx">套餐照片</string>
    
    
    
    
    <string name="load_business_empty">附近没有餐厅</string>
    <string name="load_food_empty">餐厅暂时没有菜品</string>
    <string name="load_collect_empty">无收藏菜品</string>
    <string name="load_special_empty">无特色菜品</string>
    <string name="load_order_empty">暂无订单</string>
    <string name="load_food_comment_empty">菜品暂时没有评论</string>
    <string name="load_restaurant_comment_empty">餐厅暂时没有评论</string>
    
    <string name="home_button_text_food">订购</string>
    <string name="home_button_text_collect">收藏</string>
    <string name="home_button_text_feature">特色</string>
    <string name="home_button_text_restaurant">餐厅</string>
    <string name="home_button_text_order">订单</string>
   
    <string name="business_button_text_food">菜品</string>
    <string name="business_button_text_collect">收藏</string>
    <string name="home_button_text_face">首页</string>
    <string name="business_button_text_price">特价</string>
    <string name="business_button_text_restaurant">餐厅</string>
    <string name="business_button_text_comment">点评</string>
    <string name="business_button_pay_text">结算</string>

    <string name="business_detail_button_collect_text">收藏</string>
    <string name="button_share_text">分享</string>
    
    <string name="order_button_ok">确定</string>
    <string name="make_order_title">确认订单</string>
    <string name="make_order_add">+</string>
    <string name="make_order_sub">-</string>
    
    <string name="submit_order_title">提交订单</string>
    <string name="submit_button_ok">提交订单</string>
    <string name="submit_comment_ok">提交点评</string>
    <string name="deliver_time_dialog_title">送达时间</string>
    
    <string name="food_button_text_detail">介绍</string>
    <string name="food_button_text_image">照片</string>
    <string name="food_button_text_pingl">评论</string>
    
    <string name="home_menu_business">菜品列表</string>
    <string name="home_menu_about_us">关于我们</string>
    <string name="home_menu_clear_data">清除数据</string>
    <string name="home_menu_feedback">意见反馈</string>
    <string name="home_menu_exit">退出应用</string>
    
    <string name="submit_feedback_ok">提交</string>
</resources>
