<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/menu_back"
    android:orientation="vertical" >

      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:duplicateParentState="true"
          android:gravity="center"
          android:layout_marginTop="10dip"
          android:layout_marginBottom="10dip"
          android:orientation="vertical" >

          <TextView
              android:id="@+id/home_menu_header_user_name"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:duplicateParentState="true"
              android:text="@string/main_title"
              android:textColor="#ffffffff"
              android:textSize="20.0sp" />
      </LinearLayout>


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="3.0dip"
        android:background="@color/main_color_first" />

    <TextView
        android:id="@+id/home_menu_main_business"
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:background="@drawable/home_menu_bg"
        android:drawablePadding="10.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="20.0dip"
        android:paddingRight="60.0dip"
        android:text="@string/home_menu_business"
        android:textColor="@color/home_menu_text_color"
        android:textSize="18.0sp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:src="@color/home_menu_split" />
    
    <TextView
        android:id="@+id/home_menu_main_clear_data"
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:background="@drawable/home_menu_bg"
        android:drawablePadding="10.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="20.0dip"
        android:paddingRight="60.0dip"
        android:text="@string/home_menu_clear_data"
        android:textColor="@color/home_menu_text_color"
        android:textSize="18.0sp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:src="@color/home_menu_split" />

    
    <TextView
        android:id="@+id/home_menu_main_about_us"
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:background="@drawable/home_menu_bg"
        android:drawablePadding="10.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="20.0dip"
        android:paddingRight="60.0dip"
        android:text="@string/home_menu_about_us"
        android:textColor="@color/home_menu_text_color"
        android:textSize="18.0sp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:src="@color/home_menu_split" />
    
    <TextView
        android:id="@+id/home_menu_main_feedback"
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:background="@drawable/home_menu_bg"
        android:drawablePadding="10.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="20.0dip"
        android:paddingRight="60.0dip"
        android:text="@string/home_menu_feedback"
        android:textColor="@color/home_menu_text_color"
        android:textSize="18.0sp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:src="@color/home_menu_split" />
    
    <TextView
        android:id="@+id/home_menu_main_exit"
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:background="@drawable/home_menu_bg"
        android:drawablePadding="10.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="20.0dip"
        android:paddingRight="60.0dip"
        android:text="@string/home_menu_exit"
        android:textColor="@color/home_menu_text_color"
        android:textSize="18.0sp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:src="@color/home_menu_split" />

</LinearLayout>