<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@color/home_button_back_color"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/food_button_detail"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/home_button_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_marginLeft="4dip"
                android:src="@drawable/up_introduce" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dip"
                android:background="@drawable/home_button_bg"
                android:gravity="center_vertical"
                android:text="@string/food_button_text_detail"
                android:textColor="@color/home_button_text_color"
                android:textSize="14.0sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:background="@color/home_button_split_color" />

        <LinearLayout
            android:id="@+id/food_button_image"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/home_button_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_marginLeft="4dip"
                android:src="@drawable/up_photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dip"
                android:background="@drawable/home_button_bg"
                android:gravity="center_vertical"
                android:text="@string/food_button_text_image"
                android:textColor="@color/home_button_text_color"
                android:textSize="14.0sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:background="@color/home_button_split_color" />

        <LinearLayout
            android:id="@+id/food_button_pingl"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/home_button_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_marginLeft="4dip"
                android:src="@drawable/up_comment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dip"
                android:background="@drawable/home_button_bg"
                android:gravity="center_vertical"
                android:text="@string/food_button_text_pingl"
                android:textColor="@color/home_button_text_color"
                android:textSize="14.0sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:background="@color/home_button_split_color" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/food_detail_content_frame"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />
</LinearLayout>