<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@color/main_color_second"
        android:orientation="horizontal" >
        
        
        <LinearLayout
            android:id="@+id/home_button_face"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/home_button_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_marginLeft="4dip"
                android:src="@drawable/np_feature" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dip"
                android:background="@drawable/home_button_bg"
                android:gravity="center_vertical"
                android:text="@string/home_button_text_face"
                android:textColor="@color/home_button_text_color"
                android:textSize="14.0sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:background="@color/home_button_split_color" />
        
        
        

        <LinearLayout
            android:id="@+id/home_button_food"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/home_button_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_marginLeft="4dip"
                android:src="@drawable/np_dish" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dip"
                android:background="@drawable/home_button_bg"
                android:gravity="center_vertical"
                android:text="@string/home_button_text_food"
                android:textColor="@color/home_button_text_color"
                android:textSize="14.0sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:background="@color/home_button_split_color" />
        
        
<!--  
        <LinearLayout
            android:id="@+id/home_button_collect"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/home_button_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_marginLeft="4dip"
                android:src="@drawable/np_favourite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dip"
                android:background="@drawable/home_button_bg"
                android:gravity="center_vertical"
                android:text="@string/home_button_text_collect"
                android:textColor="@color/home_button_text_color"
                android:textSize="14.0sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:background="@color/home_button_split_color" />
            
                    -->


        
        
        
        
        
        
        
        
        

        <LinearLayout
            android:id="@+id/home_button_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/home_button_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_marginLeft="4dip"
                android:src="@drawable/np_introduce" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dip"
                android:background="@drawable/home_button_bg"
                android:gravity="center_vertical"
                android:text="@string/home_button_text_restaurant"
                android:textColor="@color/home_button_text_color"
                android:textSize="14.0sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:background="@color/home_button_split_color" />

        <LinearLayout
            android:id="@+id/home_button_order"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/home_button_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_marginLeft="4dip"
                android:src="@drawable/np_comment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dip"
                android:background="@drawable/home_button_bg"
                android:gravity="center_vertical"
                android:text="@string/home_button_text_order"
                android:textColor="@color/home_button_text_color"
                android:textSize="14.0sp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_content_frame"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />
    

    

</LinearLayout>